search repositories using GraphQl

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">GitHub-GraphQl-Android</string>
+    <string name="language">Language: %1$s</string>
+    <string name="stars">Stars: %1$d</string>
 </resources>
